Add backend installation

--- a/Documentation/mybib.bib
+++ b/Documentation/mybib.bib
@@ -25,6 +25,12 @@
   howpublished = {\url{https://spatie.be/docs/laravel-permission/v6/introduction}}
 },
 
+@misc{LaravelSail,
+  author       = {Laravel},
+  title        = {Laravel Sail},
+  howpublished = {\url{https://laravel.com/docs/11.x/sail}}
+},
+
 @misc{FilamentPHP,
   author       = {Filament},
   title        = {Filament},
