Add backend softwares

--- a/Documentation/sections/softwares.tex
+++ b/Documentation/sections/softwares.tex
@@ -3,4 +3,18 @@
 
 \subsection{Backend szoftverek}
 
-lásd üzi...
+\begin{itemize}
+    \item Laravel 11, PHP 8.2, Composer
+    \item Package-k: 
+    \begin{itemize}
+        \item FilamentPHP: admin felület,
+        \item Laravel-Permissions: jogosultság kezelés,
+        \item Laravel Breeze: authentikáció,
+        \item Laravel Sail: Docker konténerek kezelése
+        \item Pest: PHP tesztelés
+    \end{itemize}
+    \item Docker (Desktop): konténerizáció
+    \item MySQL: adatbázis (konténerizálva)
+    \item MailPit: mail küldés tesztelése (konténerizálva)
+    \item PhpStorm IDE: fejlesztői környezet
+\end{itemize}
