Add web softwares

--- a/Documentation/sections/softwares.tex
+++ b/Documentation/sections/softwares.tex
@@ -18,3 +18,22 @@
     \item MailPit: mail küldés tesztelése (konténerizálva)
     \item PhpStorm IDE: fejlesztői környezet
 \end{itemize}
+
+\subsection{Webes szoftverek}
+
+\begin{itemize}
+    \item Vite 5.4 + React 18.3 (JSX)
+    \item npm: JavaScript csomagkezelő
+    \item Package-k: 
+    \begin{itemize}
+        \item React Router: navigáció
+        \item MUI, Emotion, Roboto: UI React komponensek
+        \item Axios: kérések
+        \item js-cookie: sütik kezelése
+        \item mui-markdown: markdown megjelenítése
+        \item react-md-editor: markdown szerkesztő
+        \item ESLint: kód analízis
+    \end{itemize}
+    \item Firefox, Chrome, MS Edge: böngészők
+    \item Visual Studio Code: fejlesztői környezet
+\end{itemize}
