Web softwares fix

--- a/Documentation/sections/softwares.tex
+++ b/Documentation/sections/softwares.tex
@@ -27,7 +27,7 @@
     \item Package-k: 
     \begin{itemize}
         \item React Router: navigáció
-        \item MUI, Emotion, Roboto: UI React komponensek
+        \item MUI: UI React komponensek
         \item Axios: kérések
         \item js-cookie: sütik kezelése
         \item mui-markdown: markdown megjelenítése
