--- a/Documentation/sections/installation.tex
+++ b/Documentation/sections/installation.tex
@@ -26,3 +26,10 @@ Emulátor szintén telepíthető az Android studióban.
 Ha kiadásra szánjuk az alkalmazást, akkor le kell fordítani a brojektet és APK filet kell generálni. 
 Az APK-t aláírással kell ellátni, majd feltölthető a Google Play áruházba. 
 Innen a felhasználók letölthetik és telepíthetik az alkalmazást.
+
+\subsection{Webes frontend telepítése}
+A buildeléshez és fejlesztői módban való futtatáshoz npm szükséges.
+A webes gyökérmappában (writer-reader-web-client) konzolon kiadva az \texttt{npm install} parancsot, beszerzi a szükséges JavaScript csomagokat.
+Fejlesztői környezetben, a \texttt{npm run dev} parancsot kiadva elindíthatjuk.
+A production verziót buildelni a \texttt{npm run build}-et használva tudjuk a writer-reader-web-client/dist alkönyvtárba.
+Ezután hostolható egy szerveren. \url{https://vite.dev/guide/static-deploy.html}
