Frontend dev now with port

--- a/Documentation/sections/installation.tex
+++ b/Documentation/sections/installation.tex
@@ -30,6 +30,6 @@ Innen a felhasználók letölthetik és telepíthetik az alkalmazást.
 \subsection{Webes frontend telepítése}
 A buildeléshez és fejlesztői módban való futtatáshoz npm szükséges.
 A webes gyökérmappában (writer-reader-web-client) konzolon kiadva az \texttt{npm install} parancsot, beszerzi a szükséges JavaScript csomagokat.
-Fejlesztői környezetben, a \texttt{npm run dev} parancsot kiadva elindíthatjuk.
+Fejlesztői környezetben, a \texttt{npm run dev} parancsot kiadva elindíthatjuk, jelenleg a localhost 3000-es portján.
 A production verziót buildelni a \texttt{npm run build}-et használva tudjuk a writer-reader-web-client/dist alkönyvtárba.
 Ezután hostolható egy szerveren. \url{https://vite.dev/guide/static-deploy.html}
