Add summary section

--- a/Documentation/sections/summary.tex
+++ b/Documentation/sections/summary.tex
@@ -1,2 +1,8 @@
 \section{Összefoglalás}
 \label{sec:summary}
+
+A projektmunka során specifikáltuk, megterveztük, és implementáltuk a Közösségi Író-olvasó oldalt. Az alkalmazás célja, hogy egy olyan platformot biztosítson, ahol az írók megoszthatják műveiket, és az olvasók könnyen megtalálhatják az érdeklődésüknek megfelelő tartalmakat. Az alkalmazás lehetőséget ad az írók számára, hogy műveiket kategóriákba sorolják, és a felhasználók számára, hogy kedvenc műveiket kedvelhessék és kommentekkel láthassák el.
+
+Az alkalmazás kliens-szerver architektúrát használ, lazán csatolt módon Rest API-kon keresztül kommunikálnak a kliensek a szerverrel. A backend a Laravel nevű PHP keretrendszert használva készült el. Az alkalmazás kliens oldali része egy webes frontend és egy mobil kliens. A webes frontend a React keretrendszerre épül, a mobil kliens pedig a JetPack Compose keretrendszer segítségével készült. 
+
+Munkánkat alapos tervezéssel, és architektúrális döntések meghozásával támogattuk, mint például a különböző felhasznált technológiák és keretrendszerek kiválasztása és alkalmazása. Jelentős mennyiségű implementációs munkát végeztünk, és bár minden specifikált funkció nincs még implementálva, az elkészült alkalmazás már használható és stabil, biztonságos és könnyen bővíthető alapot nyújt jövőbeli fejlesztésekhez.
