--- a/Documentation/sections/improvements.tex
+++ b/Documentation/sections/improvements.tex
@@ -1,2 +1,14 @@
 \section{Továbbfejlesztési lehetőségek}
 \label{sec:improvements}
+A projekt amellett, hogy nem valósít meg minden funkciót, amelyet a specifikációban megfogalmaztunk, további fejlesztési lehetőségeket is rejt magában. Ezek közül néhányat a következőkben felsorolunk.
+\begin{itemize}
+    \item Profilok böngészése, megtekintése.
+    \item Keresési szűrők hozzáadása (pl. kategória, karakterek, stb).
+    \item Moderátori funkciók implementálása mobil kliensre.
+    \item Felhasználói profil testreszabása: profilkép, borítókép, bemutatkozás.
+    \item Megtekintésszámláló hozzáadása művekhez.
+    \item Indexkép támogatása művekhez.
+    \item Felolvasás funkció hozzáadása művekhez.
+    \item Felhasználók "követhhetik" egymást. Értesítést kapnak, ha a követett felhasználó új művet publikál.
+    \item Törénetek megosztása közösslégi média platformokra.
+\end{itemize}
