Documentation: Backend Testing

--- a/Documentation/sections/implementation-subsections/backend.tex
+++ b/Documentation/sections/implementation-subsections/backend.tex
@@ -117,7 +117,17 @@ Ennek előnye hogy ellenőrzéskor csak a jogosultság meglétét kell ellenőri
 
 \subsubsection{Tesztelés}
 
-Teszteltünk, PEST, mekkora fedettség, mi lett tesztelve és miért
+\paragraph{Laravel Pest}
+
+A Laravel Pest egy modern PHP tesztelési keretrendszer, amely a Laravel alkalmazások tesztelését egyszerűbbé és olvashatóbbá teszi. A Pest a PHPUnit alapjaira épül, de letisztultabb szintaxist és fejlett funkciókat kínál, amelyek megkönnyítik a tesztek írását és karbantartását.
+
+\paragraph{A Pest jellemzői}
+
+\begin{itemize} \item \textbf{Egyszerű szintaxis:} A Pest minimalista megközelítése révén a tesztek könnyen olvashatók és írhatók, csökkentve a boilerplate kód mennyiségét. \item \textbf{Gyors telepítés:} A Pest gyorsan integrálható meglévő Laravel projektekbe, lehetővé téve a zökkenőmentes átállást vagy párhuzamos használatot a PHPUnit-nal. \item \textbf{Fejlett funkciók:} Beépített támogatás a párhuzamos teszteléshez, mutációs teszteléshez és architektúra teszteléshez, amelyek növelik a tesztelés hatékonyságát és megbízhatóságát. \end{itemize}
+
+A Pest használata a Laravel alkalmazások tesztelésére modern és hatékony megközelítést kínál, amely növeli a fejlesztés minőségét és sebességét.
+
+Ezért választottuk a backend oldalon is a Pest\-et az autentikáció és a vezérlők (controller), valamint a Request-s unit tesztelésére.
 
 \subsubsection{Admin felület}
 
