Web documentation final

--- a/Documentation/sections/implementation-subsections/web-client.tex
+++ b/Documentation/sections/implementation-subsections/web-client.tex
@@ -98,4 +98,33 @@ Itt a gyűjteménybe szedett művek listáját kapjuk meg, továbbá láthatjuk,
 \end{figure}
 
 A gyűjteményben lévő műveket is meg lehet nyitni, hogy elolvassuk.
+Itt láthatóak a bennük lévő szereplők, a kategóriái, címkéi.
+Alul lapozhatunk fejezetek között, továbbá a hozzászólások is itt látszanak.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{./figures/reader-page.png}
+    \caption{Mű olvasása}
+    \label{fig:reader-page}
+\end{figure}
+
+Alább láthatók a bejelentkezési és regisztrációs oldalak.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{./figures/login-register.png}
+    \caption{Bejelentkezés, Regisztráció}
+    \label{fig:login-register}
+\end{figure}
+
+A bejelentkezett felhasználó képes látogatni a /profile és /account oldalakat.
+Továbbá a bal felső sarokban megjelenik egy kis ikon a felhasználónevének kezdőbetűjével.
+Erre rákattintva az alábbi menü látható.
+Továbbá a Saját Profilom (/profile) oldalon érheti el saját műveit és gyűjteményeit.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.3]{./figures/profile-page.png}
+    \caption{Profil, saját művek és felhasználói menü}
+    \label{fig:profile-page}
+\end{figure}
