--- a/Documentation/sections/softwares.tex
+++ b/Documentation/sections/softwares.tex
@@ -37,3 +37,29 @@
     \item Firefox, Chrome, MS Edge: böngészők
     \item Visual Studio Code: fejlesztői környezet
 \end{itemize}
+
+
+\subsection{Androidos szoftverek}
+\begin{itemize}
+    \item Android Studio: fejlesztői környezet
+    \item Kotlin: programozási nyelv
+    \item fontosabb package-k:
+    \begin{itemize}
+        \item Retrofit: HTTP kliens
+        \item Gson: JSON konverzió
+        \item Jetpack Compose: UI
+        \item Material3: Material Design komponensek
+        \item dataStore: autentikációs adatok tárolása
+    \end{itemize}
+    \item AVD: Android Virtual Device (emulátor)
+    \item Postman: böngésző a végpontok teszteléséhez
+
+\end{itemize}
+
+\subsection{Közös szoftverek}
+\begin{itemize}
+    \item Git: verziókezelő
+    \item GitHub: tároló
+    \item LaTeX: dokumentáció
+    \item Google docs: ötletelés
+    \item Teams: kommunikáció
