--- a/Documentation/sections/implementation-subsections/architecture.tex
+++ b/Documentation/sections/implementation-subsections/architecture.tex
@@ -39,3 +39,7 @@ A mobilos kliens 2 fő rétegre osztható:
 
     \end{itemize}
 \end{itemize}
+
+\subsubsection{Webes frontend}
+
+A webes kliens REACT-ot használ és ebből adódóan egy SPA (Single-Page Application), amely komponensekkel építi fel a virtuális DOM-t, állapotok és események vezérlik.
