Add final documentation changes

--- a/Documentation/sections/purpose-functions-envirement.tex
+++ b/Documentation/sections/purpose-functions-envirement.tex
@@ -45,6 +45,7 @@ A moderátorok a moderálási jogosultságokkal rendelkeznek, az adminisztrátor
 A backend a Laravel PHP keretrendszerrel \cite{LaravelDocs} készült, mely egy MVC (Model-View-Controller) architektúrát követ. A megvalósítás során a Laravel 11-es verzióját használtuk. A backend szolgáltatásokat REST API-n keresztül érhetik el a kliensek, így lazán csatoltak a rendszerek, könnyű bővíteni, karbantartani őket.
 
 \subsubsection{Web kliens}
+A webes kliens a Vite 5.4 és React 18.3 technológiákkal készült. A Vite egy modern JavaScript csomagkezelő, a React pedig egy népszerű frontend keretrendszer. A webes kliens a böngészőben fut, a felhasználói felület reszponzív, azaz különböző méret és felbontású eszközökön is használható. A webes kliens használatához internetelérés szükséges, hogy az alkalmazás elérje a backend szolgáltatásokat.
 
 \subsubsection{Mobil kliens}
 A mobil kliens platformspecifikus, android operációs rendszerre készült kotlin nyelven Android Studioban.
